<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HAB Modem and Tracker</string>

    <!-- displayed in menu at top of screen -->
    <string name="status_screen">Decoder</string>
    <string name="map_screen">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_screen">Settings</string>
    <string name="log_screen">Logs</string>
    <string name="refresh_button">Refresh</string>
    <string name="graphs_button">Graphs</string>
    <string name="online_button">Online</string>
    <string name="btconnect_button">Connect</string>

    <!-- titles of windows and dialogs -->

    <string name="dialog_logs_title">Recent Log Messages</string>
    <string name="title_activity_prefs">Settings</string>
    <string name="title_activity_status_screen">Decoder</string>
    <string name="title_activity_map">HAB Tracker</string>
    <string name="title_activity_start">HAB Tracker</string>
    <string name="dialog_graphs_title">Graphs</string>
    <string name="location_dialog">My Location</string>

    <!-- contents of preference screen -->

    <string name="pref_callsign">Callsign</string>
    <string name="pref_habitat_update_title">Habitat Update Period (minutes)</string>
    <string name="pref_habitat_update_summ">Enter time between querying server for new data</string>
    <string name="pref_keep_screen_title">Keep screen on</string>
    <string name="pref_keep_screen_summ">The screen is kept on when the app is in the foreground</string>
    <string name="pref_habitat_lines_title">Max Database Entries Returned</string>
    <string name="pref_chase_update_title">Chase Car Update Period (seconds)</string>
    <string name="pref_chase_update_summ">Enter seconds between chase car position update</string>
    <string name="pref_habitat_lines_summ">Set the maximum number of lines returned by a data fetch query</string>
    <string name="pref_inactive_title">Inactivity Timeout Period (minutes)</string>
    <string name="pref_inactive_summ">Set the inactive period for the decoder and data fetch queries</string>
    <string name="pref_callsign_summ">Enter a callsign to identify your receiver</string>
    <string name="pref_habitat_server">Habitat Server URL</string>
    <string name="pref_predictor_server">Predictor Server URL</string>
    <string name="pref_habitat_db">Habitat Database Name</string>
    <string name="pref_habitat_server_summ">Enter the address for the habitat server</string>
    <string name="pref_predictor_server_summ">Enter the address for the predictor server</string>
    <string name="pref_habitat_db_summ">Enter the database name</string>
    <string name="pref_advanced">Advanced Settings</string>
    <string name="pref_map_path">Path to Map File</string>
    <string name="pref_map_path_summ">Enter the path to the .map file</string>
    <string name="pref_test_enable_title">Test Features</string>
    <string name="pref_test_enable_summ">Enable test/beta features</string>
    

    <!-- strings used to display data -->
    <string name="time">TIME</string>
    <string name="altitude">ALTITUDE</string>
    <string name="altitude_max">MAX</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="ascent_rate">ASCENT RATE</string>

    <!-- select payload dialog -->
    <string name="add_button_description">Add Payload to be Tracked</string>
    <string name="dialog_add_payload_title">Select Payload</string>
    <string name="dialog_add_payload_body">Select or enter payload to be tracked</string>

    <!-- generic -->
    <string name="cancel">Cancel</string>
    <string name="accept">OK</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    
    <!-- first run messages -->
    <string name="firstruntitle">WARNING</string>
    <string name="firstrunmessage">This app provides mapping data which can be used for navigation. The app does not provide audio prompts and so must never be used while driving a motor vehicle. No guarantee of correctness is given for data presented by this app.</string>
    <string name="firstruncontinue">I Agree</string>
    <string name="maphelpermessage">This app requires Open Street Map data in the mapsforge (.map) format. Please download maps for your region from download.mapsforge.org/maps/ and select a file when done.</string>
    <string name="maphelpercontinue">Select Map File</string>
    <string name="maphelpernomap">Dont Use Maps</string>
    <string name="mapshelptitle">About Maps</string>

    <!-- add dialog -->
    <string name="payaddpayload">Payload</string>
    <string name="payaddlookback">Look Back  </string>
    <string name="payadddays">Days, </string>
    <string name="payaddhours">Hours</string>

    <!-- decoder screen -->
    <string name="decoderecho">ECHO</string>
    <string name="decoderalerts">ALERTS</string>
    <string name="decoderonline">ONLINE</string>
    <string name="decoderactive">ACTIVE</string>
    <string name="decoderbaud">BAUD</string>
    <string name="decoderdata">DATA</string>
    <string name="decoderstops">STOPS</string>
    <string name="decoderstatus">STATUS</string>
    <string name="decoderafsk">MOD.</string>
    <string name="decoderencoding">ENC.</string>
    <string name="title_activity_bt_screen">BtScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>